--- a/bmi.html
+++ b/bmi.html
@@ -45,7 +45,7 @@ body {
 }
 
 .bmi-calculator {
-  border: 5px solid white;
+  border: 5px solid #9c27b0;
   border-radius: 10px;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   padding: 3em;
