--- a/bmi.html
+++ b/bmi.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+Project-KHUSHI TARANI 6A
+</head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
