--- a/bmi.html
+++ b/bmi.html
@@ -2,7 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-Project-KHUSHI TARANI 6A
+<h1>PROJECT-KHUSHI TARANI 6A</h1>
+</h1>
 </head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
