--- a/bmi.html
+++ b/bmi.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<h1>PROJECT-KHUSHI TARANI 6A</h1>
+<h1><big></big>PROJECT-KHUSHI TARANI 6A</big></h1>
 </h1>
 </head>
 <meta charset="UTF-8">
