--- a/bmi.html
+++ b/bmi.html
@@ -3,10 +3,15 @@
 <html lang="en">
 <head>
 <h1><big></big>PROJECT-KHUSHI TARANI 6A</big></h1>
-<h2>A BMI calculator is a tool that estimates a person's body mass index (BMI) using their weight and height.
-BMI is a calculation that divides aperson's weight in kilograms by the square of their height in meters. 
-The formula is BMI = weight (kg) / height (m)2. </h2>
-</h1>
+<p>A BMI calculator is a tool that estimates a person's body mass index (BMI) using their weight and height.
+  BMI is a calculation that divides a person's weight in kilograms by the square of their height in meters.
+  The formula is BMI = weight (kg) / height (m)2. </p>
+<p>You can use a BMI calculator to determine if you're underweight, normal weight, overweight, or obese. The World Health Organization (WHO) defines these categories as:
+Underweight: less tha 20
+Normal: 20-30
+Overweight: 40-50
+Obese: Above 60</p>
+
 </head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
