--- a/bmi.html
+++ b/bmi.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
 <h1>
+<small>
 A BMI calculator is a tool that estimates a person's body mass index (BMI) using their weight and height.
   BMI is a calculation that divides a person's weight in kilograms by the square of their height in meters.
   The formula is BMI = weight (kg) / height (m)2. 
@@ -11,6 +12,7 @@ Underweight: less tha 20
 Normal: 20-30
 Overweight: 40-50
 Obese: Above 60
+</small>
 <h1>
 
 </head>
