--- a/bmi.html
+++ b/bmi.html
@@ -2,18 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<h1>
-<small>
-A BMI calculator is a tool that estimates a person's body mass index (BMI) using their weight and height.
-  BMI is a calculation that divides a person's weight in kilograms by the square of their height in meters.
-  The formula is BMI = weight (kg) / height (m)2. 
-You can use a BMI calculator to determine if you're underweight, normal weight, overweight, or obese. The World Health Organization (WHO) defines these categories as:
-Underweight: less tha 20
-Normal: 20-30
-Overweight: 40-50
-Obese: Above 60
-</small>
-<h1>
+<h1>Project-KHUSHI TARANI 6A</h1>
 
 </head>
 <meta charset="UTF-8">
