--- a/bmi.html
+++ b/bmi.html
@@ -1,5 +1,9 @@
 
 <!DOCTYPE html>
+<head>PROJECT_KHUSHI TARANI 6A
+A BMI calculator is a tool that estimates a person's body mass index (BMI) using their weight and height.
+BMI is a calculation that divides a person's weight in kilograms by the square of their height in meters.
+The formula is BMI = weight (kg) / height (m)2. </head>
 <html lang="en">
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
