--- a/bmi.html
+++ b/bmi.html
@@ -1,8 +1,6 @@
 
 <!DOCTYPE html>
-<head>
-  PROJECT-KHUSHI TARANI 6A
-</head>
+<head><big>PROJECT-KHUSHI TARANI 6A</big></head>
 <html lang="en">
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
