--- a/bmi.html
+++ b/bmi.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<head><big>PROJECT-KHUSHI TARANI 6A</big></head>
+<h1><big>PROJECT-KHUSHI TARANI 6A</big><h1>
 <html lang="en">
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
