--- a/bmi.html
+++ b/bmi.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<h1><big>PROJECT-KHUSHI TARANI 6A</big><h1>
+<head><b>PROJECT-KHUSHI TARANI 6A</b></head>
 <html lang="en">
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 <style>@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
 :root {
-  --background-color: #f6f6f6;
+  --background-color:white;
   --vigo-color: #B300B3;
   --slider-color: #A3A3A3;
   --input-number-color: #EBEBEB;
