--- a/bmi.html
+++ b/bmi.html
@@ -10,7 +10,7 @@
 
 :root {
   --background-color:white;
-  --vigo-color: #B300B3;
+  --vigo-color: #000000;
   --slider-color: #A3A3A3;
   --input-number-color: #EBEBEB;
 }
@@ -44,7 +44,7 @@ body {
 }
 
 .bmi-calculator {
-  border: 5px solid #9c27b0;
+  border: 5px solid #000000;
   border-radius: 10px;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   padding: 3em;
@@ -139,7 +139,7 @@ input[type=number]:focus {
   padding: 11px 32px;
   transition: .2s;
   border: none;
-  background-color: var(--vigo-color);
+  background-color: #000000(--vigo-color);
   text-transform: uppercase;
   cursor: pointer;
 }
