--- a/bmi.html
+++ b/bmi.html
@@ -139,7 +139,7 @@ input[type=number]:focus {
   padding: 11px 32px;
   transition: .2s;
   border: none;
-  background-color: #000000(--vigo-color);
+  background-color: #000000;
   text-transform: uppercase;
   cursor: pointer;
 }
