--- a/bmi.html
+++ b/bmi.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,8 @@
 <style>@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
 :root {
-  --background-color:white;
-  --vigo-color: #000000;
+  --background-color: #f6f6f6;
+  --vigo-color: #B300B3;
   --slider-color: #A3A3A3;
   --input-number-color: #EBEBEB;
 }
@@ -44,7 +45,8 @@ body {
 }
 
 .bmi-calculator {
-  border: 5px solid #000000;
+  border: 5px solid white;
+  border: 5px solid #9c27b0;
   border-radius: 10px;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   padding: 3em;
@@ -139,7 +141,7 @@ input[type=number]:focus {
   padding: 11px 32px;
   transition: .2s;
   border: none;
-  background-color: #000000;
+  background-color: var(--vigo-color);
   text-transform: uppercase;
   cursor: pointer;
 }
@@ -151,7 +153,7 @@ input[type=number]:focus {
   .bmi-calculator {
     height: 560px;
   }
-  
+
   h1 {
     font-size: 1.5em;
   }
@@ -231,6 +233,6 @@ function calculateBmi() {
   realbmiOutput.innerHTML = " " + roundedBmi; 
   if (roundedBmi > 26) {
     messageOutput.innerHTML = "<br>Start workout";
-    {
+  } 
 }</script></body>
 </html>
